--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "tabla-multiplicar",
-  "version": "1.0.0",
-  "description": "Una app para multiplicar por linea de comando",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Jefferson Estacio",
-  "license": "ISC",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "yargs": "^16.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+    "name": "tabla-multiplicar",
+    "version": "1.0.0",
+    "description": "Una app para multiplicar por linea de comando",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Jordy Quilachamin",
+    "license": "ISC",
+    "dependencies": {
+        "colors": "^1.4.0",
+        "yargs": "^16.1.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
+    }
 }
